# rag-local

./: .gitignore  README.md  SESSION_SUMMARY.md  design.md  key-github  key-github.pub  proposal.md  pyproject.toml  requirements.txt  spec_document-ingestion.md  spec_rag-response.md  spec_semantic-search.md  spec_vector-persistence.md  visualize_vectors.py
src/rag/: __init__.py  chunker.py  cli.py  config.py  embedder.py  generator.py  loader.py  search.py  types.py  vectorstore.py
tests/: README.md  test_chunker.py  test_embedder.py  test_generator.py  test_loader.py  test_search.py  test_vectorstore.py
